[gd_scene load_steps=12 format=3 uid="uid://5gbqaf1gqn30"]

[ext_resource type="Script" path="res://BrainVisualizer/UI/Windows/Cortical_Properties/WindowCorticalProperties.gd" id="1_1jbcd"]
[ext_resource type="PackedScene" uid="uid://cya0u5xbn7bro" path="res://BrainVisualizer/UI/GenericElements/Collapsable/VerticalCollapsible.tscn" id="2_wrcar"]
[ext_resource type="PackedScene" uid="uid://c10sw6pgpfy48" path="res://BrainVisualizer/UI/GenericElements/TitleBar/TitleBar.tscn" id="4_pwsxt"]
[ext_resource type="PackedScene" uid="uid://506fv2gitw7k" path="res://BrainVisualizer/UI/Windows/Cortical_Properties/Parts/CorticalPropertiesCorticalParameters.tscn" id="5_2tr5n"]
[ext_resource type="PackedScene" uid="uid://rvvhpq3y0on7" path="res://BrainVisualizer/UI/Windows/Cortical_Properties/Parts/CorticalPropertiesNeuronFiringParameters.tscn" id="6_k1df6"]
[ext_resource type="PackedScene" uid="uid://dm68mg7exp1ca" path="res://BrainVisualizer/UI/Windows/Cortical_Properties/Parts/CorticalPropertiesMemoryParameters.tscn" id="7_l4w3m"]
[ext_resource type="PackedScene" uid="uid://de7cguh4dnbxg" path="res://BrainVisualizer/UI/Windows/Cortical_Properties/Parts/CorticalPropertiesPostSynapticPotentialParameters.tscn" id="8_a5fj2"]
[ext_resource type="PackedScene" uid="uid://ckkgl10utu0i8" path="res://BrainVisualizer/UI/Windows/Cortical_Properties/Parts/CorticalPropertiesCorticalAreaMonitoring.tscn" id="9_li0sx"]
[ext_resource type="PackedScene" uid="uid://bsjtfu2i0eyou" path="res://BrainVisualizer/UI/Windows/Cortical_Properties/Parts/CorticalPropertiesConnections.tscn" id="10_1oexy"]
[ext_resource type="PackedScene" uid="uid://ckej7m86vhcdj" path="res://BrainVisualizer/UI/Windows/Cortical_Properties/Parts/CorticalPropertiesDangerZone.tscn" id="11_ekmr0"]


[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k8nka"]
bg_color = Color(0.0627451, 0.101961, 0.156863, 1)

[node name="WindowCorticalProperties" type="VBoxContainer"]
offset_right = 126.0
offset_bottom = 400.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/separation = 0
script = ExtResource("1_1jbcd")

[node name="TitleBar" parent="." instance=ExtResource("4_pwsxt")]
layout_mode = 2
title = "Cortical Area Details"

[node name="WindowPanel" type="PanelContainer" parent="."]
layout_mode = 2

[node name="WindowMargin" type="MarginContainer" parent="WindowPanel"]
layout_mode = 2

[node name="WindowInternals" type="VBoxContainer" parent="WindowPanel/WindowMargin"]
layout_mode = 2

[node name="Cortical" parent="WindowPanel/WindowMargin/WindowInternals" instance=ExtResource("2_wrcar")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_k8nka")
prefab_to_spawn = ExtResource("5_2tr5n")
section_text = &"Summary"

[node name="Neuron_Firing" parent="WindowPanel/WindowMargin/WindowInternals" instance=ExtResource("2_wrcar")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_k8nka")
start_open = false
prefab_to_spawn = ExtResource("6_k1df6")
section_text = &"Neuron Firing Parameters"

[node name="Memory" parent="WindowPanel/WindowMargin/WindowInternals" instance=ExtResource("2_wrcar")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_k8nka")
start_open = false
prefab_to_spawn = ExtResource("7_l4w3m")
section_text = &"Memory"

[node name="Post_Synaptic_Potential" parent="WindowPanel/WindowMargin/WindowInternals" instance=ExtResource("2_wrcar")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_k8nka")
start_open = false
prefab_to_spawn = ExtResource("8_a5fj2")
section_text = &"Post Synaptic Potential parameters"

[node name="Coritcal_Monitoring" parent="WindowPanel/WindowMargin/WindowInternals" instance=ExtResource("2_wrcar")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_k8nka")
start_open = false
prefab_to_spawn = ExtResource("9_li0sx")
section_text = &"Cortical Area Monitoring"

[node name="Connections" parent="WindowPanel/WindowMargin/WindowInternals" instance=ExtResource("2_wrcar")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_k8nka")
start_open = false
prefab_to_spawn = ExtResource("10_1oexy")
section_text = &"Connections"

[node name="DangerZone" parent="WindowPanel/WindowMargin/WindowInternals" instance=ExtResource("2_wrcar")]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_k8nka")
start_open = false
prefab_to_spawn = ExtResource("11_ekmr0")
section_text = &"Danger Zone"
